--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1727,6 +1727,36 @@ width: 90%;
 .press-release-opaning-info p{
   font-size: 15px;
 }
+.press-release-full-line{
+  width: 100%;
+  height: 3px;
+  background-color: black;
+  margin-top: 50px;
+}
+.release-International-img img{
+  width: 65%;
+ display: block;
+ margin: auto;
+ margin-top: 10px;
+}
+.release-International-header{
+  padding: 0px 60px;
+}
+.release-International-header h3{
+  text-align: center;
+  color: #474646;
+  font-weight: 700;
+ margin-top: 10px;
+}
+.release-International-info p{
+  font-size: 15px;
+  color: #6e6d6d;
+
+}
+.release-International-bottom-img img{
+  width: 100%;
+  margin-top: 80px;
+}
 @media screen and (max-width:500px) {
   .press-release {
     padding: 10px;
@@ -1745,6 +1775,35 @@ width: 90%;
     margin: auto;
     margin-top: 10px;
   }
-
+  .release-International-header{
+    padding: 0px 10px;
+  }
 }
 /* press-release-section-end */
+/* news-letter-section-start */
+#nav-news-letter {
+  padding: 60px 0px 120px 0px;
+  background-color: #e2dbdb;
+}
+
+.news-letter{
+  padding: 100px;
+  background-color: #fff;
+}
+
+.news-letter-header h3 {
+  font-weight: 400;
+}
+.news-letter-notice-img img {
+  width: 100%;
+}
+
+
+@media screen and (max-width:500px) {
+  .news-letter {
+    padding: 10px;
+    background-color: #fff;
+    padding-bottom: 30px;
+  }
+}
+/* news-letter-section-end */
