--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1807,3 +1807,43 @@ width: 90%;
   }
 }
 /* news-letter-section-end */
+/* leaflet-brochure-section-start  */
+/* leaflet-brochure-hero-section-start  */
+.leaflet-brochure-hero {
+  background: url(../img/hero-img/Slider-cis-2-01-scaled.jpg);
+  width: 100%;
+  height: 50vh;
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+  opacity: 0.8;
+  background-attachment: fixed;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  position: relative;
+}
+
+.leaflet-brochure-hero::before {
+  content: "";
+  position: absolute;
+  top: 0;
+  right: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.7);
+}
+
+.leaflet-brochure-hero h1 {
+  font-size: 50px;
+  font-weight: 800;
+  color: #fff;
+  text-align: center;
+  position: relative;
+}
+/* leaflet-brochure-section-end  */
+.leaflet-brochure-img img{
+  width: 100%;
+}
+
+/* leaflet-brochure-hero-section-end  */
