--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1847,3 +1847,44 @@ width: 90%;
 }
 
 /* leaflet-brochure-hero-section-end  */
+
+/* stories-section-start */
+
+/*  stories-hero-section-start  */ 
+.stories-hero {
+  background: url(../img/hero-img/Slider-cis-2-01-scaled.jpg);
+  width: 100%;
+  height: 50vh;
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+  opacity: 0.8;
+  background-attachment: fixed;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  position: relative;
+}
+
+.stories-hero::before {
+  content: "";
+  position: absolute;
+  top: 0;
+  right: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.7);
+}
+
+.stories-hero h1 {
+  font-size: 50px;
+  font-weight: 800;
+  color: #fff;
+  text-align: center;
+  position: relative;
+}
+/*  stories-hero-section-end  */
+.stories-img img{
+  width: 100%;
+}
+/* stories-section-end */
