--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -2154,3 +2154,76 @@ upcoming-events-hero-section-start  */
 
 }
 /* upcoming-events-section-end */
+/* contact-us-section-start */
+/* contact-us-hero-section-start */
+.contact-us-hero{
+  background: url(../img/hero-img/Slider-cis-2-01-scaled.jpg);
+  width: 100%;
+  height: 50vh;
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+  opacity: 0.8;
+  background-attachment: fixed;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  position: relative;
+}
+
+.contact-us-hero::before {
+  content: "";
+  position: absolute;
+  top: 0;
+  right: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.7);
+}
+
+.contact-us-hero h1 {
+  font-size: 50px;
+  font-weight: 800;
+  color: #fff;
+  text-align: center;
+  position: relative;
+}
+
+/* contact-us-hero-section-end */
+#nav-contact-us{
+  background-color: #6e6d6d;
+  padding: 80px;
+}
+.get-in-touch-header h2{
+  text-align: center;
+  color: #fff;
+}
+.get-in-touch-info{
+  padding:40px 0px 0px 0px ;
+}
+.get-in-touch-icon{
+  display: block;
+  margin: auto;
+  width: 40px;
+}
+.get-in-touch-icon i{
+  font-size: 18px;
+  padding: 13px;
+  background-color: #fff;
+  border-radius: 50%;
+ text-align: center;
+  margin: auto;
+}
+.get-in-touch-info h4{
+  text-align: center;
+  color: #fff;
+  margin-top: 15px;
+}
+.get-in-touch-info p{
+  text-align: center;
+  color: #fff;
+}
+
+
+
+/* contact-us-section-end */
