--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -2224,6 +2224,57 @@ upcoming-events-hero-section-start  */
   color: #fff;
 }
 
+.contact-us-header h2{
+  text-align: center;
+  color: #fff;
+}
+.nav-contact{
+  padding: 0px 60px;
+}
 
+.nav-contact label{
+  margin-top: 20px;
+  font-weight: 600;
+  color: #fff;
+  font-size: 15px;
+}
 
+.nav-contact input{
+  width: 100%;
+  padding: 2px;
+  border-radius: 2px;
+  border: none;
+}
+.nav-contact textarea {
+  width: 100%;
+  height: 100px;
+  border-radius: 2px;
+}
+.nav-contact .submit{
+width: 90px;
+padding: 5px 20px;
+font-size: 15px;
+margin-top: 30px;
+}
+.nav-contact .submit:hover{
+  background-color: red;
+  color: #fff;
+}
+@media screen and (max-width:500px) {
+  .nav-contact{
+    padding: 0px  0px;
+   
+  }
+  .contact-us{
+    margin-top: 50px;
+  }
+}
+#contact-us-map{
+padding: 10px 10px 80px 10px;
+}
+
+.contact-map iframe{
+  width: 100%;
+  height: 70vh;
+}
 /* contact-us-section-end */
