--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -195,15 +195,36 @@
   margin-top: 10px;
   border-radius: 6px;
 }
-
-.img-area img {
+.img-area-picture img {
   width: 100% !important;
   height: 200px;
   display: block;
   margin: auto;
-
   object-fit: cover;
+  position: relative;
 }
+.img-area-picture img:hover{
+  opacity: 0.5;
+}
+
+
+
+.img-area-picture h5{
+  position: absolute;
+  top: 0;
+  left: 0;
+  font-size: 12px;
+  padding: 4px 5px;
+  background-color: rgb(206, 3, 3);
+  color: #fff;
+}
+/* .img-area img {
+  width: 100% !important;
+  height: 200px;
+  display: block;
+  margin: auto;
+  object-fit: cover;
+} */
 
 
 .img-area a {
@@ -772,7 +793,6 @@
   background-color: rgb(209, 7, 7);
   padding: 10px;
   width: 30%;
-
 }
 
 .nav-about-header p {
@@ -1473,6 +1493,47 @@
 .activities-img {
   margin-top: 10px;
   margin-bottom: 15px;
+  position: relative;
+}
+.activities-img h5{
+  position: absolute;
+  top: 0;
+  right: 0;
+  font-size: 12px;
+  padding: 4px 5px;
+  background-color: rgb(3, 117, 194);
+  color: #fff;
+}
+.activities-img-massage-logo {
+  padding: 0px 6px;
+ background-color: #474646;
+  position: absolute;
+  top: 0;
+}
+.activities-img-massage-logo i{
+  font-size: 10px;
+  color: #fff;
+}
+.activities-img-massage-logo span{
+  font-size: 11px;
+  color: #fff;
+}
+
+.activities-img-text{
+  width: 70%;
+  padding: 5px 8px 5px 10px;
+  background-color: rgba(0, 0, 0, 0.4);
+  position: absolute;
+  top: 200px;
+}
+.activities-img-text p{
+  font-size: 12px;
+  color: #fff;
+}
+.activities-img-text h6{
+  font-size: 16px;
+  margin-top: -10px;
+  color: #fff;
 }
 
 .activities-img img {
