--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -195,6 +195,9 @@
   margin-top: 10px;
   border-radius: 6px;
 }
+.img-area-picture{
+position: relative;
+}
 .img-area-picture img {
   width: 100% !important;
   height: 200px;
@@ -203,11 +206,21 @@
   object-fit: cover;
   position: relative;
 }
-.img-area-picture img:hover{
-  opacity: 0.5;
+
+.image-overlay{
+  
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background: rgba(0, 0, 0, 0.7); 
+  opacity: 0;
+  transition: opacity 0.3s ease;
 }
-
-
+.img-area-picture:hover .image-overlay {
+  opacity: 0.6;
+}
 
 .img-area-picture h5{
   position: absolute;
@@ -2252,7 +2265,10 @@ upcoming-events-hero-section-start  */
 
 /* contact-us-hero-section-end */
 #nav-contact-us{
-  background-color: #6e6d6d;
+ background: url(../img/xjCbTr.jpg);
+ background-position: center;
+ background-repeat: no-repeat;
+ background-size: cover;
   padding: 80px;
 }
 .get-in-touch-header h2{
