--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1429,12 +1429,7 @@ padding-left: 20px;
   font-weight: 400;
 }
 
-/* .work-for-text p {
-  font-size: 15px;
-  text-align: justify;
-  margin-top: 20px;
-  padding-left: 10px;
-} */
+
 .national-banar img{
   width: 100%;
 }
@@ -2196,6 +2191,50 @@ width: 90%;
 }
 /* publication-section-end  */
 
+/* print-media-section-start */
+/* print-media-hero-section-start*/
+.print-media-hero {
+  background: url(../img/hero-img/Slider-cis-2-01-scaled.jpg);
+  width: 100%;
+  height: 50vh;
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+  opacity: 0.8;
+  background-attachment: fixed;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  position: relative;
+}
+
+.print-media-hero::before {
+  content: "";
+  position: absolute;
+  top: 0;
+  right: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.7);
+}
+
+.print-media-hero h1 {
+  font-size: 50px;
+  font-weight: 800;
+  color: #fff;
+  position: relative;
+}
+
+/*  print-media-hero-section-end */
+.print-media-news img{
+  width: 100%;
+}
+/* print-media-section-end  */
+
+
+
+
+
 /* covid-19-leaflet-section-start */
 /* covid-19-leaflet-hero-section-start */
 
@@ -2615,37 +2654,3 @@ background-color: #f0efef;
   }
 }
 /* vacancy-announcements-section-end  */
-/* print-hero-section-start*/
-.about-hero {
-  background: url(../img/hero-img/Slider-cis-2-01-scaled.jpg);
-  width: 100%;
-  height: 50vh;
-  background-position: center;
-  background-repeat: no-repeat;
-  background-size: cover;
-  opacity: 0.8;
-  background-attachment: fixed;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  position: relative;
-}
-
-.about-hero::before {
-  content: "";
-  position: absolute;
-  top: 0;
-  right: 0;
-  width: 100%;
-  height: 100%;
-  background-color: rgba(0, 0, 0, 0.7);
-}
-
-.about-hero h1 {
-  font-size: 50px;
-  font-weight: 800;
-  color: #fff;
-  position: relative;
-}
-
-/*  print-hero-section-end */
