--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -2232,6 +2232,87 @@ width: 90%;
 /* print-media-section-end  */
 
 
+/* electronic-media-section-start */
+/* electronic-media-hero-section-start*/
+.electronic-media-hero {
+  background: url(../img/hero-img/Slider-cis-2-01-scaled.jpg);
+  width: 100%;
+  height: 50vh;
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+  opacity: 0.8;
+  background-attachment: fixed;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  position: relative;
+}
+
+.electronic-media-hero::before {
+  content: "";
+  position: absolute;
+  top: 0;
+  right: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.7);
+}
+
+.electronic-media-hero h1 {
+  font-size: 50px;
+  font-weight: 800;
+  color: #fff;
+  position: relative;
+}
+
+/*  electronic-media-hero-section-end */
+#nav-electronic-media{
+  padding: 80px 0px 80px 0px;
+}
+.electronic-media-cis-chanal{
+  box-shadow: 0px 0px 10px 0px rgba(0,0,0,0.5);
+  margin-top: 20px;
+}
+.electronic-media-video{
+  padding: 10px;
+}
+.electronic-media-video iframe{
+  width: 100%;
+  height: 200px;
+}
+.electronic-media-text{
+  padding: 0px 0px 5px 0px;
+}
+.electronic-media-text p{
+  text-align: center;
+  font-size: 15px;
+  font-weight: 500;
+  padding: 5px;
+}
+.electronic-media-text .cis-respons{
+  text-align: center;
+  font-size: 15px;
+  font-weight: 500;
+  padding: 5px 5px 50px 5px;
+}
+.electronic-media-text .cis-npf{
+  padding: 5px 5px 72px 5px;
+}
+@media screen and (max-width:500px) {
+  .electronic-media-text .cis-respons{
+    text-align: center;
+    font-size: 15px;
+    font-weight: 500;
+    padding: 5px 5px 5px 5px;
+  }
+  .electronic-media-text .cis-npf{
+    padding: 5px 5px 5px 5px;
+  }
+}
+/* electronic-media-section-end  */
+
+
 
 
 
