--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -2270,10 +2270,33 @@ width: 90%;
 #nav-electronic-media{
   padding: 80px 0px 80px 0px;
 }
-.electronic-media-cis-chanal{
+/* .electronic-media-cis-chanal{
   box-shadow: 0px 0px 10px 0px rgba(0,0,0,0.5);
   margin-top: 20px;
+  
+} */
+
+.electronic-media-cis-chanal-Society{
+  box-shadow: 0px 0px 10px 0px rgba(0,0,0,0.5);
+  margin-top: 20px;
+  height: 280px;
 }
+.electronic-media-cis-chanal-Initiative{
+  box-shadow: 0px 0px 10px 0px rgba(0,0,0,0.5);
+  margin-top: 20px;
+  height: 280px;
+}
+.electronic-media-cis-chanal-emergency-health{
+  box-shadow: 0px 0px 10px 0px rgba(0,0,0,0.5);
+  margin-top: 20px;
+  height: 450px;
+}
+.electronic-media-cis-chanal-cis-health-for{
+  box-shadow: 0px 0px 10px 0px rgba(0,0,0,0.5);
+  margin-top: 20px;
+  height: 280px;
+}
+
 .electronic-media-video{
   padding: 10px;
 }
@@ -2281,25 +2304,44 @@ width: 90%;
   width: 100%;
   height: 200px;
 }
-.electronic-media-text{
 
-  
-}
 .electronic-media-text p{
   text-align: center;
   font-size: 15px;
   font-weight: 500;
   padding: 5px;
 }
-.electronic-media-text .cis-respons{
+.tv-Channel{
+  margin-top: 100px;
+
+}
+.tv-channel-header h3{
+  font-size: 32px;
+  font-weight: 500;
+}
+.tv-channel-header-underline{
+  padding: 1px;
+  background-color: black;
+  width: 20%;
+  margin-top: 25px;
+}
+
+
+/* .electronic-media-text .cis-respons{
   text-align: center;
   font-size: 15px;
   font-weight: 500;
   padding: 5px 5px 50px 5px;
-}
-.electronic-media-text .cis-npf{
+} */
+/* .electronic-media-text .cis-npf{
   padding: 5px 5px 72px 5px;
-}
+} */
+/* .electronic-media-text .cis-Covid-19{
+  padding: 0px 5px 32px 5px;
+} */
+/* .electronic-media-text .cis-work-force{
+  padding: 0px 5px 32px 5px;
+} */
 @media screen and (max-width:500px) {
   .electronic-media-text .cis-respons{
     text-align: center;
