--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -2327,6 +2327,88 @@ width: 90%;
 }
 
 
+
+.tv-Channel-RTV-International{
+  box-shadow: 0px 0px 10px 0px rgba(0,0,0,0.5);
+  margin-top: 20px;
+  height: 300px; 
+}
+.tv-Channel-RTV-video{
+  padding: 10px;
+}
+.tv-Channel-RTV-video iframe{
+  width: 100%;
+  height: 200px;
+}
+.tv-Channel-RTV-text p{
+  text-align: center;
+  font-size: 20px;
+  font-weight: 500;
+  padding-top: 5px;
+}
+.tv-Channel-TV-1-Provides{
+  box-shadow: 0px 0px 10px 0px rgba(0,0,0,0.5);
+  margin-top: 20px;
+  height: 300px; 
+  margin-top: 80px;
+}
+
+.tv-Channel-TV-1-Provides-video{
+  padding: 10px;
+}
+.tv-Channel-TV-1-Provides-video iframe{
+  width: 100%;
+  height: 200px;
+}
+.tv-Channel-TV-1-Provides-text p{
+  text-align: center;
+  font-size: 18px;
+  font-weight: 500;
+  padding-top: 5px;
+}
+
+
+.tv-Channel-Desh-TV{
+  box-shadow: 0px 0px 10px 0px rgba(0,0,0,0.5);
+  margin-top: 20px;
+  height: 280px; 
+  margin-top: 80px;
+}
+
+.tv-Channel-Desh-TV-video{
+  padding: 10px;
+}
+.tv-Channel-Desh-TV-video iframe{
+  width: 100%;
+  height: 200px;
+}
+.tv-Channel-Desh-TV-text p{
+  text-align: center;
+  font-size: 18px;
+  font-weight: 500;
+  padding-top: 5px;
+}
+
+.tv-Channel-Channel-S{
+  box-shadow: 0px 0px 10px 0px rgba(0,0,0,0.5);
+  margin-top: 20px;
+  height: 280px; 
+  margin-top: 80px;
+}
+
+.tv-Channel-Channel-S-video{
+  padding: 10px;
+}
+.tv-Channel-Channel-S-video iframe{
+  width: 100%;
+  height: 200px;
+}
+.tv-Channel-Channel-S-text p{
+  text-align: center;
+  font-size: 18px;
+  font-weight: 500;
+  padding-top: 5px;
+}
 /* .electronic-media-text .cis-respons{
   text-align: center;
   font-size: 15px;
