--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -259,7 +259,7 @@
 
 /* activities-section-start */
 #activities {
-  padding: 20px 0px;
+  padding: 80px 0px;
 }
 
 .activities-header h1 {
@@ -660,6 +660,9 @@ padding-left: 20px;
   background-color: black;
   color: #fff;
 }
+/* .nav-link:active{
+  background-color: black !important;
+} */
 
 /* photo-gallery-section-end */
 /* fotter-section-start */
@@ -852,6 +855,9 @@ padding-left: 20px;
 
 .copy p {
   text-align: center;
+}
+.contact a:hover{
+  color: black;
 }
 
 /* fotter-section-end */
@@ -2226,6 +2232,9 @@ width: 90%;
 }
 
 /*  print-media-hero-section-end */
+.print-media-news{
+  margin-top: 20px;
+}
 .print-media-news img{
   width: 100%;
 }
